# NginxLogAnalyzer

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  log_analyzer.py  pyproject.toml  report.html  test_log_analyzer.py
.github/workflows/: ci-pipeline.yml
log/: nginx-access-ui.log-20250630
reports/: report-2025.02.19.html
tests/: test_log_analyzer.py
