[project]
name = "loganalyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Заднепровский Максим Николаевич",email = "MZadneprovskiy@rg-gr.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "structlog (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

